--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,13 @@
+.logo {
+  width: 10%;
+  margin-right: auto;
+  display: block;
+}
+
 html,
 body {
   margin: 5px;
-  padding: 50px;
+  padding: 40px;
 }
 
 .game-name {
