--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
 .logo {
   width: 10%;
   margin-right: auto;
@@ -8,12 +10,130 @@ html,
 body {
   margin: 5px;
   padding: 40px;
+  align-items: center;
+  padding: 1.25em;
+  color: #444;
 }
 
 .game-name {
   font-family: "Poiret One", cursive;
 }
 
+/* ----------------------- TABLE ----------------------- */
+
+table {
+  width: 100%;
+  border-spacing: 0;
+  border-radius: 1em;
+  overflow: hidden;
+}
+
+thead {
+  visibility: hidden;
+  position: absolute;
+  width: 0;
+  height: 0;
+}
+
+th {
+  background: #215a8e;
+  color: #fff;
+}
+
+td:nth-child(1) {
+  background: #215a8e;
+  color: #fff;
+  border-radius: 1em 1em 0 0;
+}
+
+th,
+td {
+  padding: 1em;
+}
+
+tr,
+td {
+  display: block;
+}
+
+td {
+  position: relative;
+}
+
+td::before {
+  content: attr(data-label);
+  position: absolute;
+  left: 0;
+  padding-left: 1em;
+  font-weight: 600;
+  font-size: 0.9em;
+  text-transform: uppercase;
+}
+
+tr {
+  margin-bottom: 1.5em;
+  border: 1px solid #ddd;
+  border-radius: 1em;
+  text-align: right;
+}
+
+tr:last-of-type {
+  margin-bottom: 0;
+}
+
+td:nth-child(n + 2):nth-child(odd) {
+  background-color: #ddd;
+}
+
+@media only screen and (min-width: 768px) {
+  table {
+    max-width: 1200px;
+    margin: 0 auto;
+    border: 1px solid #ddd;
+  }
+
+  thead {
+    visibility: visible;
+    position: relative;
+  }
+
+  th {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 0.9em;
+  }
+
+  tr {
+    display: table-row;
+    border: none;
+    border-radius: 0;
+    text-align: left;
+  }
+
+  tr:nth-child(even) {
+    background-color: #ddd;
+  }
+
+  td {
+    display: table-cell;
+  }
+
+  td::before {
+    content: none;
+  }
+
+  td:nth-child(1) {
+    background: transparent;
+    color: #444;
+    border-radius: 0;
+  }
+
+  td:nth-child(n + 2):nth-child(odd) {
+    background-color: transparent;
+  }
+}
+
+/* ----------------------- BOARD ----------------------- */
 .board {
   display: flex;
   background-color: SaddleBrown;
@@ -21,6 +141,8 @@ body {
   width: 800px;
   border-radius: 50px;
   padding: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .section {
@@ -64,8 +186,7 @@ body {
   height: 25px;
 }
 
-/*MENU BAR CSS */
-/*I just use this for the menu bar on the board.php page. The other one is bootstrap.*/
+/* ----------------------- MENU BAR CSS ----------------------- */
 .nav-bar ul {
   list-style-type: none;
   margin: 0;
