--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -137,8 +137,8 @@ td:nth-child(n + 2):nth-child(odd) {
 .board {
   display: flex;
   background-color: SaddleBrown;
-  height: 200px;
-  width: 800px;
+  height: 300px;
+  width: 1000px;
   border-radius: 50px;
   padding: 30px;
   margin-left: auto;
@@ -161,22 +161,29 @@ td:nth-child(n + 2):nth-child(odd) {
   flex-grow: 6;
 }
 
-.midrow {
-  display: flex;
-  flex-grow: 1;
-}
-
-.midrow .pot:hover {
-  background-color: rgba(255, 255, 255, 0.16);
-  cursor: pointer;
-}
-
 .pot {
   position: relative;
   background-color: rgba(255, 255, 255, 0.08);
   flex-grow: 1;
   margin: 5px;
+}
+
+.section .pot {
   border-radius: 50px;
+}
+
+.midrow {
+  display: flex;
+  flex-grow: 1;
+}
+
+.midrow .pot {
+  border-radius: 50%;
+}
+
+.midrow .pot:hover {
+  background-color: rgba(255, 255, 255, 0.16);
+  cursor: pointer;
 }
 
 .bead {
