--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,22 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
-.logo {
-  width: 10%;
-  margin-right: auto;
-  display: block;
-}
-
-html,
-body {
-  margin: 5px;
-  padding: 40px;
-  align-items: center;
-  padding: 1.25em;
-  color: #444;
-}
-
 .game-name {
   font-family: "Poiret One", cursive;
+}
+
+.welcome {
+  background-color: #f5f5f5;
+  padding-left: 1rem;
+  padding-top: 1rem !important;
+  margin-top: 4.5rem !important;
+}
+
+.welcome span {
+  font-weight: bold;
+}
+
+main > .container {
+  padding: 140px 15px 60px;
+}
+
+.footer {
+  background-color: #f5f5f5;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 /* ----------------------- TABLE ----------------------- */
@@ -36,12 +45,12 @@ thead {
 }
 
 th {
-  background: #215a8e;
+  background: #c68b59;
   color: #fff;
 }
 
 td:nth-child(1) {
-  background: #215a8e;
+  background: #c68b59;
   color: #fff;
   border-radius: 1em 1em 0 0;
 }
@@ -191,44 +200,4 @@ td:nth-child(n + 2):nth-child(odd) {
   border-radius: 50%;
   width: 25px;
   height: 25px;
-}
-
-/* ----------------------- MENU BAR CSS ----------------------- */
-.nav-bar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-.nav-bar li {
-  float: left;
-  color: #4caf50;
-}
-
-.nav-bar li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.nav-bar .login {
-  float: right;
-  padding-top: 10px;
-  padding-right: 10px;
-}
-
-.nav-bar .float-right {
-  float: right;
-}
-
-.nav-bar li a:hover:not(.active) {
-  background-color: #111;
-}
-
-.nav-bar .active {
-  background-color: #4caf50;
 }
