--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,19 +4,8 @@
   font-family: "Poiret One", cursive;
 }
 
-.welcome {
-  background-color: #f5f5f5;
-  padding-left: 1rem;
-  padding-top: 1rem !important;
-  margin-top: 4.5rem !important;
-}
-
-.welcome span {
-  font-weight: bold;
-}
-
 main > .container {
-  padding: 140px 15px 60px;
+  padding: 100px 15px 60px;
 }
 
 .footer {
@@ -177,6 +166,13 @@ td:nth-child(n + 2):nth-child(odd) {
   margin: 5px;
 }
 
+.enemy {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.3);
+  flex-grow: 1;
+  margin: 5px;
+}
+
 .section .pot {
   border-radius: 50px;
 }
@@ -193,6 +189,11 @@ td:nth-child(n + 2):nth-child(odd) {
 .midrow .pot:hover {
   background-color: rgba(255, 255, 255, 0.16);
   cursor: pointer;
+}
+
+.midrow .enemy:hover {
+  background-color: rgba(255, 0, 0, 0.548);
+  cursor: not-allowed;
 }
 
 .bead {
